kafka, dbmanager actors, new case classes for working with these actors

--- a/src/main/resources/defaults.conf
+++ b/src/main/resources/defaults.conf
@@ -12,7 +12,12 @@
              }
     }
 
-    endpoint {
-      interface = "0.0.0.0"
+    rest {
+      host = "0.0.0.0"
       port = 8009
+    }
+
+    kafka {
+      server = "localhost:9092"
+      topic = test
     }
