--- a/src/main/resources/defaults.conf
+++ b/src/main/resources/defaults.conf
@@ -10,6 +10,18 @@
                 hikari.minimumIdle = 10
                 hirari.idleTimeout = 120000
              }
+        test {
+                connectionPool = disabled
+                url = "jdbc:postgresql://localhost/testdb"
+                driver = org.postgresql.Driver
+                keepAliveConnection = true
+                user = postgres
+                password = postgres
+                hikaricp.maximumPoolSize = 10
+                hikari.minimumIdle = 10
+                hirari.idleTimeout = 120000
+             }
+
     }
 
     rest {
